Added FileChecker.h and FileChecker.cpp, actual features are WIP

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
 ComG_Framework.opensdf
 ComG_Framework.sdf
+ComGLab/Debug/Mains.tlog/CL.write.1.tlog
+ComGLab/Debug/Mains.tlog/Mains.lastbuildstate
+ComGLab/Debug/Mains.tlog/cl.command.1.tlog
+ComGLab/Debug/Mains.tlog/link.command.1.tlog
+ComGLab/Debug/Mains.tlog/link.read.1.tlog
+ComGLab/Debug/Mains.tlog/link.write.1.tlog
+ComGLab/Debug/vc120.idb
+ComGLab/Debug/Mains.tlog/CL.read.1.tlog
