Teleporter from 1st floor to 2nd floor added and functional
Changes made to files: SP2_Scene.cpp, Camera3.h, Camera3.cpp

--- a/ComGLab/ComGLab.vcxproj
+++ b/ComGLab/ComGLab.vcxproj
@@ -95,6 +95,7 @@
     <None Include="Shader\TransformVertexShader.vertexshader" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="FileChecker.cpp" />
     <ClCompile Include="Source\Application.cpp" />
     <ClCompile Include="Source\Particle.cpp" />
     <ClCompile Include="Source\SoundSystem.cpp" />
@@ -114,6 +115,7 @@
     <ClCompile Include="Source\Utility.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="FileChecker.h" />
     <ClInclude Include="Source\Application.h" />
     <ClInclude Include="Source\Particle.h" />
     <ClInclude Include="Source\SharedData.h" />
