--- a/ComGLab/ComGLab.vcxproj.filters
+++ b/ComGLab/ComGLab.vcxproj.filters
@@ -104,6 +104,9 @@
     <ClCompile Include="Source\SP2_Scene.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="FileChecker.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Application.h">
@@ -164,6 +167,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Source\Particle.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="FileChecker.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
