Changes made to the spawning of objects in raycasting.

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,13 @@ ComGLab/Debug/Mains.tlog/link.read.1.tlog
 ComGLab/Debug/Mains.tlog/link.write.1.tlog
 ComGLab/Debug/vc120.idb
 ComGLab/Debug/Mains.tlog/CL.read.1.tlog
+ComGLab/ComGLab.vcxproj
+ComGLab/ComGLab.vcxproj.filters
+Common/Debug/Common.tlog/CL.read.1.tlog
+Common/Debug/Common.tlog/CL.write.1.tlog
+Common/Debug/Common.tlog/Common.lastbuildstate
+Common/Debug/Common.tlog/Lib-link.read.1.tlog
+Common/Debug/Common.tlog/Lib-link.write.1.tlog
+Common/Debug/Common.tlog/cl.command.1.tlog
+Common/Debug/Common.tlog/lib.command.1.tlog
+Common/Debug/vc120.idb
