Andy's powerup system added.

--- a/.gitignore
+++ b/.gitignore
@@ -95,3 +95,10 @@ ComGLab/Release/Mains.tlog/cl.command.1.tlog
 ComGLab/Release/Mains.tlog/link.command.1.tlog
 ComGLab/Release/Mains.tlog/link.read.1.tlog
 ComGLab/Release/Mains.tlog/link.write.1.tlog
+Common/Release/Common.tlog/CL.read.1.tlog
+Common/Release/Common.tlog/CL.write.1.tlog
+Common/Release/Common.tlog/Common.lastbuildstate
+Common/Release/Common.tlog/Lib-link.read.1.tlog
+Common/Release/Common.tlog/Lib-link.write.1.tlog
+Common/Release/Common.tlog/cl.command.1.tlog
+Common/Release/Common.tlog/lib.command.1.tlog
